2012-08-27  Ingo Renner  <ingo.renner@dkd.de>

	* Removed tx_solr_Util::utf8Decode(), resolves #40256
	* Removed option to use curl as HTTP transport between TYPO3 and the Solr server, resolves #39493
	* Added option plugin.tx_solr.search.faceting.facetLinkUrlParameters, resolves #40060

2012-08-24  Ingo Renner  <ingo.renner@dkd.de>

	* Added interface tx_solr_GarbageCollectorPostProcessor
	* Added interface tx_solr_IndexQueueInitializationPostProcessor

2012-08-23  Ingo Renner  <ingo.renner@dkd.de>

	* Added feature #40058: Date facet renderer (currently not completely implemented)
	* Added feature #40054: Result document score analyzer
	* Added feature #40057: Statistics Writer
	* Added feature #40055: Last Searches

2012-08-22  Ingo Renner  <ingo.renner@dkd.de>

	* Added hierarchical facets
	* Added feature #40056: Frequent searches

2012-08-21  Ingo Renner  <ingo.renner@dkd.de>

	! [TEMPLATE] Changed the relevance view helpers to take the whole result document as argument (instead of just the score)
	! [API] Moved hook modifySearchQuery to tx_solr_Search
	! [API] cleanup: Changed tx_solr_Search->getResponse() to return instance of Apache_Solr_Response as mentioned in phpDoc
	! [TEMPLATE] Changed the results per page subpart to be rendered as a regular plugin command

	* Refactoring: Extracted several search components to separate classes

	* Added class tx_solr_Typo3Environment
	* Added helper methods for file indexing
	* Removed unnecessary file path prefixes for hooks where classes can leverage the autoloader
	* Moved facetting initialization from pi_results to faceting query modifier
	* Added interface tx_solr_SearchComponent
	* Added interface tx_solr_QueryAware
	* Added interface tx_solr_SearchAware
	* Added a search component manager
	* Changed phpDoc of tx_solr_ResponseProcessor->processResponse() to indicate that it should return void
	* Added tx_solr_Search->getSolrConnection()