@@ -205,6 +205,7 @@ return array(
 	'tx_solr_additionalindexqueueitemindexer' => $extensionPath . 'interfaces/interface.tx_solr_additionalindexqueueitemindexer.php',
 	'tx_solr_additionalpageindexer' => $extensionPath . 'interfaces/interface.tx_solr_additionalpageindexer.php',
 	'tx_solr_commandpluginaware' => $extensionPath . 'interfaces/interface.tx_solr_commandpluginaware.php',
+	'tx_solr_commandpostprocessor' => $extensionPath . 'interfaces/interface.tx_solr_commandpostprocessor.php',
 	'tx_solr_facetoptionsrenderer' => $extensionPath . 'interfaces/interface.tx_solr_facetoptionsrenderer.php',
 	'tx_solr_facetrenderer' => $extensionPath . 'interfaces/interface.tx_solr_facetrenderer.php',
 	'tx_solr_facetsmodifier' =>  $extensionPath . 'interfaces/interface.tx_solr_facetsmodifier.php',
